fixed icon alignment

--- a/src/app/construccion/construccion.component.css
+++ b/src/app/construccion/construccion.component.css
@@ -82,15 +82,28 @@ html{
     margin-bottom: 5px;
     font-size: 25px;
   }
-  .inp{
+
+  .inpTxtArea{
     width: 100%;
-    /* height: 45px; */
+     /* height: 45px;  */
     padding: 0 15px 0 15px;
     border: none;
     background: #cfd8dc;
     font-size: 18px;
     color: #555;
   }
+
+  .inp{
+    width: 100%;
+    height: 45px; 
+    padding: 0 15px 0 15px;
+    border: none;
+    background: #cfd8dc;
+    font-size: 18px;
+    color: #555;
+  }
+
+
   .inp:focus{
     outline: none;
   }
